Dark mode: Fix dropdown design (#2417)

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -212,11 +212,6 @@
     &[data-focus-visible-added] {
       outline-offset: -$focus-visible-outer-width;
       box-shadow: inset 0 0 0 add($focus-visible-inner-width, $focus-visible-outer-width) var(--#{$prefix}focus-visible-inner-color);
-
-      &.active {
-        outline-color: var(--#{$prefix}focus-visible-inner-color);
-        box-shadow: inset 0 0 0 add($focus-visible-inner-width, $focus-visible-outer-width) var(--#{$prefix}focus-visible-outer-color);
-      }
     }
   }
   // End mod
